edited for pre-auth development

--- a/src/components/Nav/Toolbar/Toolbar.css
+++ b/src/components/Nav/Toolbar/Toolbar.css
@@ -49,7 +49,7 @@
 }
 .toolbar__navitgation-items a:hover,
 .toolbar__navitgation-items a:active{
-  color:#B14E4E;
+  color:#243c24;
 }
 
 @media(max-width:768px){
