--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,4 +1,4 @@
-@media all and (min-width: 480px) {
+/* @media all and (min-width: 480px) {
   .LoginForm {
     display: flex;
     flex-direction: column;
@@ -7,4 +7,4 @@
     margin: 0 auto;
     max-width: 320px;
   }
-}
+} */
