registration form ready to be fecthed

--- a/src/components/Utils/Utils.css
+++ b/src/components/Utils/Utils.css
@@ -1,4 +1,4 @@
-.Hyph {
+/* .Hyph {
   margin-right: 5px;
   margin-left: 5px;
 }
@@ -49,4 +49,4 @@
 .Section--list {
   margin-left: 10px;
   margin-right: 10px;
-}
+} */
