--- a/src/components/IndividualRegForm/IndividualRegForm.css
+++ b/src/components/IndividualRegForm/IndividualRegForm.css
@@ -1,3 +1,8 @@
+/* * {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 .IndividualRegForm {
   display: flex;
   flex-direction: column;
@@ -10,11 +15,10 @@
 
 .registrationError {
   color: red;
-  padding: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   flex-wrap: wrap;
   word-wrap: wrap;
-}
+} */
