--- a/src/routes/RegistrationPage/RegistrationPage.css
+++ b/src/routes/RegistrationPage/RegistrationPage.css
@@ -1,8 +1,8 @@
-.RegistrationPage {
+/* .RegistrationPage {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   width: 50%;
   margin: auto;
@@ -10,4 +10,4 @@
 }
 .RegistrationPage h2 {
   padding: 40px;
-}
+} */
