fetched endpoint and is posting new users

--- a/src/routes/RegistrationPage/RegistrationPage.css
+++ b/src/routes/RegistrationPage/RegistrationPage.css
@@ -1,4 +1,4 @@
-/* .RegistrationPage {
+.RegistrationPage {
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -10,4 +10,4 @@
 }
 .RegistrationPage h2 {
   padding: 40px;
-} */
+}
