--- a/src/components/IndividualRegForm/IndividualRegForm.css
+++ b/src/components/IndividualRegForm/IndividualRegForm.css
@@ -1,4 +1,4 @@
-/* * {
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -13,12 +13,14 @@
   margin: 0 auto;
 }
 
-.registrationError {
-  color: red;
+.red {
+  color: #fff;
+  background: red;
+  padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   flex-wrap: wrap;
   word-wrap: wrap;
-} */
+}
