--- a/src/components/IndividualRegForm/IndividualRegForm.css
+++ b/src/components/IndividualRegForm/IndividualRegForm.css
@@ -3,14 +3,9 @@
   padding: 0;
   margin: 0;
 }
+
 .IndividualRegForm {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  margin: 0 auto;
+  padding: 60px 0;
 }
 
 .registration_error {
@@ -23,4 +18,8 @@
   text-align: center;
   flex-wrap: wrap;
   word-wrap: wrap;
+}
+
+.buttonContainer {
+  text-align: center;
 }
