--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -8,3 +8,33 @@
     max-width: 320px;
   }
 } */
+
+.LoginForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 60px 0;
+}
+
+.LoginForm button {
+  margin-top: 20px;
+  border-radius: 4px;
+  padding: 15px;
+  background-color: darkseagreen;
+  color: white;
+  border: none;
+  width: 100px;
+}
+
+.LoginForm button:hover {
+  background-color: #e5efe5;
+  color: darkseagreen;
+}
+
+.LoginForm input {
+  width: 100%;
+  clear: both;
+  padding: 5px;
+  border: none;
+  border-bottom: 2px solid darkseagreen;
+}
