--- a/src/components/Utils/Utils.css
+++ b/src/components/Utils/Utils.css
@@ -5,14 +5,11 @@
 
 .Input,
 .Textarea {
-  border: 1px solid lightblue;
-  display: block;
-  font-size: 1.1em;
-  margin-bottom: 10px;
-  padding: 10px;
-  text-align: left;
   width: 100%;
-  border-radius: 4px;
+  clear: both;
+  padding: 5px;
+  border: none;
+  border-bottom: 2px solid darkseagreen;
 }
 
 .Input::placeholder,
@@ -25,15 +22,18 @@
 }
 
 .Button {
-  order: 1px solid #aaa;
-  background-color: #eee;
-  font-size: 1.1em;
-  border: 1px solid lightblue;
+  margin-top: 20px;
   border-radius: 4px;
-  padding: 8px 12px;
-  font-weight: bold;
-  cursor: pointer;
-  margin: 5px 0;
+  padding: 15px;
+  background-color: darkseagreen;
+  color: white;
+  border: none;
+  width: 100px;
+}
+
+.Button:hover {
+  background-color: #e5efe5;
+  color: darkseagreen;
 }
 
 .Required {
