--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -1,20 +1,28 @@
-.btn{
-  background-color:darkseagreen;
-  padding:1em;
-  color:white;
+.btn {
+  background-color: darkseagreen;
+  padding: 1em;
+  color: white;
   text-decoration: none;
-  margin:1em;
+  margin: 1em;
   border-radius: 3px;
 }
 
-.btn:hover{
-  background-color:#e5efe5;
-  color:darkseagreen;
-
+.btn:hover {
+  background-color: #e5efe5;
+  color: darkseagreen;
 }
-.button-bar{
-  display:flex;
+.button-bar {
+  margin-top: 20px;
+  display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   text-align: center;
+}
+
+.landing h2 {
+  font-size: 32px;
+}
+
+.landing p {
+  margin-top: 15px;
 }
