--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,12 +1,20 @@
 #footer {
   background-color: #487948;
   height: 70px;
-  color: #fff;
-  text-align: center;
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
   padding: 1.5rem;
   margin-top: 30px;
+  display: flex;
+  justify-content: center;
 }
+
+#footer > *{
+  color:white;
+}
+#footer p{
+  margin:0 1em
+}
+
