--- a/src/components/Utils/Utils.css
+++ b/src/components/Utils/Utils.css
@@ -1,6 +1,10 @@
 .Hyph {
-  margin-right: 5px;
-  margin-left: 5px;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 2px solid darkseagreen;
+  margin: 1em 0;
+  padding: 0;
 }
 
 .Input,
