--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -45,3 +45,21 @@
     margin: 0 auto;
   }
 }
+
+.landing-logo{
+  width:60%;
+  display:block;
+  margin:auto;
+}
+
+@media (min-width:770px){
+  .landing-logo{
+    width:40%;
+  }
+}
+
+@media (min-width:1100px){
+  .landing-logo{
+    width:20%;
+  }
+}
