--- a/src/routes/StoryPage/StoryPage.css
+++ b/src/routes/StoryPage/StoryPage.css
@@ -19,3 +19,15 @@
     margin: 20px auto;
   }
 }
+
+.delete{
+  color:#9f5f5f;
+  background-color:none;
+  border:none;
+  cursor: pointer;
+}
+
+.row{
+  display:flex;
+  justify-content: space-around;
+}
