--- a/src/routes/StoryPage/StoryPage.css
+++ b/src/routes/StoryPage/StoryPage.css
@@ -44,7 +44,7 @@ select {
   margin-top: 20px;
   border-radius: 4px;
   padding: 15px;
-  background-color: darkseagreen;
+  background-color: #487948;
   color: white;
   border: none;
   width: 100px;
@@ -61,7 +61,7 @@ select {
 }
 
 .delete-btn {
-  background-color: red;
+  background-color: #dc143c;
   margin-left: 20px;
   font-weight: 900;
 }
