--- a/src/components/CreateCommentForm/CommentForm.css
+++ b/src/components/CreateCommentForm/CommentForm.css
@@ -9,7 +9,7 @@
   margin-top: 20px;
   border-radius: 4px;
   padding: 15px;
-  background-color: darkseagreen;
+  background-color: #487948;
   color: white;
   border: none;
   width: 100px;
