--- a/src/components/CreateStoryForm/CreateStoryForm.css
+++ b/src/components/CreateStoryForm/CreateStoryForm.css
@@ -14,7 +14,7 @@
   margin-top: 20px;
   border-radius: 4px;
   padding: 15px;
-  background-color: darkseagreen;
+  background-color: #487948;
   color: white;
   border: none;
   width: 100px;
