--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,4 +1,3 @@
-
 .LoginForm {
   display: flex;
   flex-direction: column;
@@ -10,7 +9,7 @@
   margin-top: 20px;
   border-radius: 4px;
   padding: 15px;
-  background-color: darkseagreen;
+  background-color: #487948;
   color: white;
   border: none;
   width: 100px;
