--- a/src/components/Utils/Utils.css
+++ b/src/components/Utils/Utils.css
@@ -29,7 +29,7 @@
   margin-top: 20px;
   border-radius: 4px;
   padding: 15px;
-  background-color: darkseagreen;
+  background-color: #487948;
   color: white;
   border: none;
   width: 100px;
@@ -55,7 +55,7 @@
   margin-right: 10px;
 }
 
-.tool-bar{
-  display:flex;
+.tool-bar {
+  display: flex;
   justify-content: space-evenly;
 }
