--- a/src/routes/DashboardPage/DashboardPage.css
+++ b/src/routes/DashboardPage/DashboardPage.css
@@ -29,6 +29,7 @@ select::-ms-expand {
 .customSelect {
   position: relative;
   display: flex;
+  align-items: center;
   width: 8em;
   height: 2em;
   line-height: 2;
@@ -46,7 +47,7 @@ select {
 }
 
 .customSelect::after {
-  content: "\25BC";
+  content: '\25BC';
   position: absolute;
   top: 0;
   right: 0;
@@ -68,4 +69,8 @@ select {
   color: white;
   border: none;
   width: 100px;
+  cursor: pointer;
+}
+.edit-btn:hover {
+  opacity: 0.7;
 }
